@@ -1,3 +1,7 @@
+Sun Aug 17 14:44:57 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* import.c (add_rcs_file): Add comment about -k overriding wrappers.
+
 Sat Aug 16 18:09:05 1997   Martin Sjoelin <martin.sjoelin@ubs.ch>
 	and Jim Kingdon  <kingdon@harvey.cyclic.com>
 
